force-app/main/default/objects/AI_Conversation__c/AI_Conversation__c.object-meta.xml
<CustomObject>
    <label>AI Conversation</label>
    <nameField>
        <label>Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>