force-app/main/default/objects/AI_Conversation__c/fields/Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversation_ID__c</fullName>
    <label>Conversation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>