force-app/main/default/objects/AI_Conversation__c/fields/Last_Message_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_At__c</fullName>
    <label>Last Message At</label>
    <type>DateTime</type>
</CustomField>