force-app/main/default/objects/AI_Conversation__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <label>Message Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>