force-app/main/default/objects/AI_Conversation__c/fields/Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Rating__c</fullName>
    <label>Satisfaction Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>